# qt-

./: .gitignore  CMakeLists.txt  README.md  架构
gui/: CMakeLists.txt  main_window.cpp  main_window.h
gui/global_usage/: gui_commit.cpp  gui_commit.h
gui/main_window/gallery/: desktop_gallery_view_ctrl.cpp  desktop_gallery_view_ctrl.h  gallery_main_window.cpp  gallery_main_window.h  view_gallery_view_ctrl.cpp  view_gallery_view_ctrl.h
gui/main_window/main_window_setting/: main_windwo_setting_dialog.cpp  main_windwo_setting_dialog.h  main_windwo_setting_dialog_view_ctrl.cpp  main_windwo_setting_dialog_view_ctrl.h
iRadio/: CMakeLists.txt  main.cpp  test.cpp  test.h  test1.cpp
python/: CMakeLists.txt
python/test/: test.cpp  test.h  test_massage
source_lib/: CMakeLists.txt  config.cmake
src/: CMakeLists.txt
src/iRadio/: CMakeLists.txt  main.cpp
